--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Grupo Locar - Atualização de Dados Cadastrais</title>
     <link rel="stylesheet" href="index.css" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 
 <body>
@@ -25,8 +26,7 @@
             Pedimos que todos os campos sejam preenchidos com atenção e veracidade. As
             informações fornecidas serão tratadas com total sigilo e utilizadas exclusivamente para fins
             administrativos.
-            <span style="color: red;">Caso não possua todos os dados solicitados, preencha o campo correspondente com
-                zeros.</span>
+            <span style="color: red;">Caso não possua todos os dados solicitados, preencha o campo correspondente com zeros.</span>
         </p>
 
         <p>Contamos com a colaboração de todos!</p>
@@ -83,6 +83,7 @@
             <h3 style="margin-top: 50px">📎 Documentos Opcionais</h3>
 
             <label>Nada Consta:</label>
+            <span style="color: red;">Obrigatório para o estado do Rio de Janeiro</span>
             <div class="custom-file-upload">
                 <input type="file" id="nadaConstaArquivo" name="nadaConstaArquivo" style="display: none" />
                 <button type="button" onclick="document.getElementById('nadaConstaArquivo').click()">Selecionar
