--- a/index.html
+++ b/index.html
@@ -187,110 +187,118 @@
         </form>
     </div>
 
-    <script>
-        document.getElementById('dadosForm').addEventListener('submit', function (e) {
-            e.preventDefault();
+	<script>
+		// Máscaras e utilitários
+		function limitarDigitos(input) {
+			if (input.value.length > 2) input.value = input.value.slice(0, 2);
+		}
 
-            const form = e.target;
+		function mascaraTelefone(input) {
+			input.value = input.value
+				.replace(/\D/g, '')
+				.replace(/^(\d{2})(\d)/g, '($1)$2')
+				.replace(/(\d{5})(\d)/, '$1-$2')
+				.substring(0, 14);
+		}
 
-            // Verificação de arquivos obrigatórios
-            const arquivosObrigatorios = [
-                { id: 'cnhArquivo', nome: 'CNH' },
-                { id: 'comprovanteResidencia', nome: 'Comprovante de Residência' },
-                // { id: 'nadaConstaArquivo', nome: 'Nada Consta' }
-            ];
+		function mascaraCPF(input) {
+			input.value = input.value
+				.replace(/\D/g, '')
+				.replace(/(\d{3})(\d)/, '$1.$2')
+				.replace(/(\d{3})(\d)/, '$1.$2')
+				.replace(/(\d{3})(\d{2})$/, '$1-$2')
+				.substring(0, 14);
+		}
 
-            for (const arquivo of arquivosObrigatorios) {
-                const input = document.getElementById(arquivo.id);
-                if (!input || input.files.length === 0) {
-                    alert(`Por favor, selecione o arquivo obrigatório: ${arquivo.nome}`);
-                    input.scrollIntoView({ behavior: 'smooth', block: 'center' });
-                    return;
-                }
-            }
+		function mascaraRG(input) {
+			input.value = input.value
+				.replace(/\D/g, '')
+				.replace(/(\d{2})(\d)/, '$1.$2')
+				.replace(/(\d{3})(\d)/, '$1.$2')
+				.replace(/(\d{3})(\d{1})$/, '$1-$2')
+				.substring(0, 12);
+		}
 
-            if (!form.checkValidity()) {
-                alert('Por favor, preencha todos os campos obrigatórios.');
-                return;
-            }
+		function mascaraCEP(input) {
+			input.value = input.value
+				.replace(/\D/g, '')
+				.replace(/^(\d{2})(\d)/g, '$1.$2')
+				.replace(/(\d{3})(\d)/, '$1-$2')
+				.substring(0, 10);
+		}
 
-            // Tudo certo
-            window.location.href = 'agradecimento.html';
-        });
+		// Atualização dos nomes dos arquivos
+		['cnhArquivo', 'comprovanteResidencia', 'nadaConstaArquivo', 'meiArquivo'].forEach(id => {
+			const input = document.getElementById(id);
+			const span = document.getElementById(`nomeArquivo${id.charAt(0).toUpperCase() + id.slice(1)}`);
+			if (input && span) {
+				input.addEventListener('change', () => {
+					span.textContent = input.files.length > 0 ? input.files[0].name : 'Nenhum arquivo escolhido';
+				});
+			}
+		});
 
-        function limitarDigitos(input) {
-            if (input.value.length > 2) {
-                input.value = input.value.slice(0, 2);
-            }
-        }
+		// Idade automática
+		document.getElementById('dataNascimento')?.addEventListener('change', function () {
+			const dataNasc = new Date(this.value);
+			const hoje = new Date();
+			if (!isNaN(dataNasc)) {
+				let idade = hoje.getFullYear() - dataNasc.getFullYear();
+				const m = hoje.getMonth() - dataNasc.getMonth();
+				if (m < 0 || (m === 0 && hoje.getDate() < dataNasc.getDate())) idade--;
+				document.getElementById('idade').value = idade;
+			} else {
+				document.getElementById('idade').value = '';
+			}
+		});
 
-        // Atualização de nomes dos arquivos
-        document.getElementById('cnhArquivo').addEventListener('change', function () {
-            document.getElementById('nomeArquivoCNH').textContent = this.files.length > 0 ? this.files[0].name : 'Nenhum arquivo escolhido';
-        });
+		// Envio do formulário
+		document.getElementById('dadosForm').addEventListener('submit', async function (e) {
+			e.preventDefault();
 
-        document.getElementById('comprovanteResidencia').addEventListener('change', function () {
-            document.getElementById('nomeArquivoComprovante').textContent = this.files.length > 0 ? this.files[0].name : 'Nenhum arquivo escolhido';
-        });
+			const form = e.target;
 
-        document.getElementById('nadaConstaArquivo').addEventListener('change', function () {
-            document.getElementById('nomeArquivoNadaConsta').textContent = this.files.length > 0 ? this.files[0].name : 'Nenhum arquivo escolhido';
-        });
+			// Validação básica de arquivos obrigatórios
+			const arquivosObrigatorios = [
+				{ id: 'cnhArquivo', nome: 'CNH' },
+				{ id: 'comprovanteResidencia', nome: 'Comprovante de Residência' }
+			];
 
-        document.getElementById('meiArquivo').addEventListener('change', function () {
-            document.getElementById('nomeArquivoMEI').textContent = this.files.length > 0 ? this.files[0].name : 'Nenhum arquivo escolhido';
-        });
+			for (const arquivo of arquivosObrigatorios) {
+				const input = document.getElementById(arquivo.id);
+				if (!input || input.files.length === 0) {
+					alert(`Por favor, selecione o arquivo obrigatório: ${arquivo.nome}`);
+					input.scrollIntoView({ behavior: 'smooth', block: 'center' });
+					return;
+				}
+			}
 
-        // Cálculo automático da idade
-        document.getElementById('dataNascimento')?.addEventListener('change', function () {
-            const dataNasc = new Date(this.value);
-            const hoje = new Date();
+			if (!form.checkValidity()) {
+				alert('Por favor, preencha todos os campos obrigatórios.');
+				return;
+			}
 
-            if (!isNaN(dataNasc)) {
-                let idade = hoje.getFullYear() - dataNasc.getFullYear();
-                const m = hoje.getMonth() - dataNasc.getMonth();
-                if (m < 0 || (m === 0 && hoje.getDate() < dataNasc.getDate())) idade--;
-                document.getElementById('idade').value = idade;
-            } else {
-                document.getElementById('idade').value = '';
-            }
-        });
+			const formData = new FormData(form); // Inclui campos e arquivos automaticamente
 
-        // Máscaras
-        function mascaraTelefone(input) {
-            input.value = input.value
-                .replace(/\D/g, '')
-                .replace(/^(\d{2})(\d)/g, '($1)$2')
-                .replace(/(\d{5})(\d)/, '$1-$2')
-                .substring(0, 14);
-        }
+			try {
+				const response = await fetch("https://formulario-backend-e8ok.onrender.com/enviar", {
+					method: "POST",
+					body: formData
+				});
 
-        function mascaraCPF(input) {
-            input.value = input.value
-                .replace(/\D/g, '')
-                .replace(/(\d{3})(\d)/, '$1.$2')
-                .replace(/(\d{3})(\d)/, '$1.$2')
-                .replace(/(\d{3})(\d{2})$/, '$1-$2')
-                .substring(0, 14);
-        }
+				if (response.ok) {
+					alert("Formulário enviado com sucesso!");
+					window.location.href = 'agradecimento.html';
+				} else {
+					alert("Erro ao enviar formulário. Tente novamente.");
+				}
+			} catch (err) {
+				alert("Erro de conexão. Verifique sua internet ou tente mais tarde.");
+				console.error(err);
+			}
+		});
+	</script>
 
-        function mascaraRG(input) {
-            input.value = input.value
-                .replace(/\D/g, '')
-                .replace(/(\d{2})(\d)/, '$1.$2')
-                .replace(/(\d{3})(\d)/, '$1.$2')
-                .replace(/(\d{3})(\d{1})$/, '$1-$2')
-                .substring(0, 12);
-        }
-
-        function mascaraCEP(input) {
-            input.value = input.value
-                .replace(/\D/g, '')
-                .replace(/^(\d{2})(\d)/g, '$1.$2')
-                .replace(/(\d{3})(\d)/, '$1-$2')
-                .substring(0, 10);
-        }
-    </script>
 </body>
 
 </html>
